fixed contact spacing

--- a/less/index.less
+++ b/less/index.less
@@ -202,15 +202,6 @@ h1{
 	}
 }
 
-.name-email{
-	display: flex;
-	justify-content: space-evenly;
-	width: 85%;
-}	
-.input-msg{
-	margin: 0 auto;
-	width: 85%;
-}
 
 .page p {
 	width: 85%;
@@ -230,17 +221,44 @@ h1{
 		text-align: center;
 		font-size: 2rem;
 	}
-	.btns{
-		display: flex;
-		justify-content: center;
-	}
+	
 	.contact{
 		display: flex;
-		justify-content: space-around;
+		flex-direction: column;
+		justify-content: space-evenly;
 		align-items: center;
-
+		*{
+			margin: 2% auto;
+		}
+		section{
+			width: fit-content;
+			height: fit-content;
+		}
+		.btns{
+			display: flex;
+			width: 90%;
+			justify-content: space-evenly;
+		}
+		
+		.name-email{
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			flex-wrap: wrap;
+			justify-content: start;
+			width: 85%;
+		}	
+		.input-msg, .input-name, .input-email{
+			margin: 0 auto;
+			width: 85%;
+		}
+		form{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			width: 100%;
+		}
 	}
-	form{
-		width: 100%;
-	}
+	
+	
 }
